[package]
name = "tofn"
version = "0.1.0"
authors = ["Gus Gutoski <gus@axelar.network>", "Milap Sheth <milap@axelar.network>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand_chacha = "0.3"
hmac = "0.11"
zeroize = { version = "1.4", features = ["zeroize_derive"] }

# k256 baggage
k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
ed25519 = { version = ">=2.2, <2.3", features = ["pkcs8"], default-features = false }
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", tag = "2.0.0-rc.3", features = ["alloc", "digest", "rand_core"], default_features = false }
rand = "0.8"
sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
sha3 = { version = "0.9", default-features = false }
x509-ocsp = { git = "https://github.com/RustCrypto/formats", commit = "6e60929b2903b64d4d4fd5d3f2e705680352519d" }

# logging
tracing = {version = "0.1", default-features = false}

libpaillier = { git = "https://github.com/axelarnetwork/paillier-rs", features = ["gmp"], default-features = false }

[dev-dependencies]
tracing-test = "0" # enable logging for tests
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"], default-features = false }
criterion = "0.3"

[[bench]]
name = "safe_primes"
harness = false

# Don't abort in case there is a panic to clean up data
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[features]
malicious = []
